@@ -147,6 +147,7 @@ typedef struct link {
    unsigned int delNotRecievedTIC; //1 - if file not recieved, then remove TIC
    unsigned int advancedAreafix;  // 1 - send ~areatag when area delete
    e_bundleFileNameStyle linkBundleNameStyle; // Style bundle filenames (timeStamp, addrDiff...
+	char *msgBaseDir;
 } s_link, *ps_link;
 
 typedef enum routing {route_zero, host, hub, boss, noroute, nopack, route_extern} e_routing;
