@@ -1,5 +1,10 @@
 
 ----- cvs ci ------
+Mon Jan 15 14:19:26 NOVT 2001
+max:
++ linkmsgbasedir token
+
+----- cvs ci ------
 Wed Jan  3 15:40:56 UTC 2001
 sms:
 - fixed some typos in the docs
